--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 <script src="jquery-3.1.1.min.js"></script>
 </head>
 <body>
-<p id="fader" class="fader" style="font-size:80px;text-align:center;font-family:Oganesson">Oganesson</p>
-<script type="text/javascript">
-
-$("#fader").fadeIn();
-
-</script>
+<p id="fader" style="font-size:80px;text-align:center;font-family:Oganesson">Oganesson</p>
 </body>
 
 </html>
