--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <div id="nosight" class="nosight">
 <p class="textcenter">It all starts in time.</p>
 <div style="width:100%;font-size:40px" id="nosight" class="textcenter">
+
+<!-- Hey. Would you say something's... off here? -->
+<!-- Well? -->
+
 <div id="clockdiv" class="textcenter">
   <span class="days"></span> : <span class="hours"></span> : <span class="minutes"></span> : <span class="seconds"></span>
 </div>
