--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<meta name="viewport" content="initial-scale=1">
 <title>Oganesson</title>
 <link rel="stylesheet" href="stylesheets/overall.css" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
