--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html oncontextmenu="return false;">
 
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -20,7 +20,7 @@
 <!-- Hey. Would you say something's... off here? -->
 <!-- Well? -->
 
-<div id="clockdiv" class="textcenter">
+<div id="clockdiv" class="textcenter" style="text-align:center">
   <span class="days"></span> : <span class="hours"></span> : <span class="minutes"></span> : <span class="seconds"></span>
 </div>
 </div>
