--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Oganesson</title>
 <link rel="stylesheet" href="stylesheets/overall.css" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<script src="https://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 </head>
 <body oncontextmenu="return false;">
 <div class="body">
